2001-08-04  Dave Peticolas  <dave@krondo.com>

	* src/scm/main-window.scm: handle errors in creating
	~/.gnucash/books

	* src/scm/path.scm (gnc:make-dir): new func

	* src/scm/options.scm: same as below

	* src/scm/html-style-sheet.scm: handle file opening error

2001-07-30  Christian Stimming  <stimming@tuhh.de>

	* src/scm/html-utilities.scm: Fixed bug with sub-balances in
	account tables with non-default account selection.

2001-07-17  Dave Peticolas  <dave@krondo.com>

	* doc/sgml/C/xacc-features.sgml: Matt Krai's doc patch

	* doc/sgml/C/xacc-about.sgml: Matt Krai's doc patch

	* AUTHORS: credits

	* doc/sgml/C/xacc-about.sgml: credits

	* src/gnome/gnc-dateedit.c: Matt Kraai's date accelerator bug fix

	* src/engine/io-gncbin-r.c: fix bug with price import (use
	posted date, not entered date).

	* src/engine/gnc-pricedb.[ch]: fix bugs with setting currency and
	commodity and with converting from legacy commodities.

2001-07-17  Dave Peticolas  <dave@krondo.com>

	* AUTHORS: credits

	* doc/sgml/C/xacc-about.sgml: credits

	* src/scm/report/transaction.scm: Michael T. Garrison Stuber's
	transaction report patch.

2001-07-11  Dave Peticolas  <dave@krondo.com>

	* AUTHORS: fix credits

	* doc/sgml/C/xacc-about.sgml: fix docs, credits

2001-07-11  James LewisMoss  <jimdres@mindspring.com>

	* configure.in (GNOME_XML_CFLAGS): add Richard Braakman's xml
	version check.

2001-07-09  Dave Peticolas  <dave@krondo.com>

	* configure.in: check for ghttp_ssl.h

	* src/gnome/gnc-http.c: conditionally include ghttp_ssl.h

	* doc/sgml/C/xacc-whats-new.sgml: fix spelling

	* doc/sgml/C/xacc-about.sgml: fix version

	* src/Makefile.am: link intl libs with gnucash-make-guids

	* src/register/QuickFill.c: same as below

	* src/register/quickfillcell.c: conditionally include wctype.h

	* configure.in: check for wctype.h

2001-07-07  Dave Peticolas  <dave@krondo.com>

	* src/test/gnc-test-stuff.c (get_random_query): not so many terms

	* src/test/Makefile.am: add test-scm-query
